add use case definitions, BDD features and step definitions
Signed-off-by: Dennis Grewe <dennis.grewe@hs-esslingen.de>